# choosable

./: .czblignore  .gitignore  Cargo.toml  README.md
bootloader/: Cargo.toml  build.rs
bootloader/efi/: Cargo.toml  build.rs
bootloader/efi/src/: boot_context.rs  boot_kind.rs  boot_stage.rs  disk.rs  fs.rs  iso.rs  iso_fs.rs  iso_source.rs  locator.rs  main.rs  output.rs  premount.rs  protocol.rs  strategy.rs  virtual_blockio.rs
bootloader/kernel/: Cargo.toml  build.rs
bootloader/kernel/.cargo/: config.toml
bootloader/kernel/src/: ata.rs  chainload.rs  fs.rs  io.rs  iso.rs  kbd.rs  main.rs  menu.rs  part.rs  vga.rs
bootloader/premount-init/: Cargo.toml
bootloader/premount-init/src/: main.rs
bootloader/src/: efi.rs  lib.rs  mbr.rs  stage2.rs
docs/: AGENTS.md  LICENSE-APACHE  LICENSE-MIT
src/: checks.rs  cli.rs  constants.rs  disk.rs  disk_layout.rs  error.rs  gui.rs  installer.rs  main.rs
